# test-pypi

./: bar.py  pyproject.toml
.github/workflows/: publish-pypi.yml
src/publish_pypi/: __init__.py  foo.py
