[project]
name = "publish-pypi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthieu Boubat", email = "matthieu@boubat.ch" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
publish-pypi = "publish_pypi:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
